--- a/visual/galen.config
+++ b/visual/galen.config
@@ -60,9 +60,9 @@ spec.colorscheme.testrange = 6
 #
 # galen.browserFactory.selenium.runInGrid = true
 # galen.browserFactory.selenium.grid.url = http://localhost:4444/wd/hub
-# galen.browserFactory.selenium.grid.browser =
+# galen.browserFactory.selenium.grid.browser = chrome
 # galen.browserFactory.selenium.grid.browserVersion =
-# galen.browserFactory.selenium.grid.platform =
+# galen.browserFactory.selenium.grid.platform = MAC
 
 # Default browser
 # ~~~~~~~~~~~~~~~~~~~~~~~~
