--- a/ci_files/docker-compose-example.yml
+++ b/ci_files/docker-compose-example.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
 
   selenium_hub:
-    image: selenium/hub:3.14.0
+    image: selenium/hub:3.14.0-europium
     # depends_on:
     #   - deploy
     volumes:
@@ -13,26 +13,23 @@ services:
     ports:
       - "4444:4444"
     environment:
-      GRID_MAX_SESSION: 20
-      GRID_TIMEOUT: 600000 # 10 min
-      GRID_BROWSER_TIMEOUT: 600000
-      SHM_SIZE: 1024MB
-      GRID_NEW_SESSION_WAIT_TIMEOUT: 600000
+      GRID_MAX_SESSION: 32
+      GRID_TIMEOUT: 260000
+      GRID_BROWSER_TIMEOUT: 260000
+      SHM_SIZE: 512MB
+      GRID_NEW_SESSION_WAIT_TIMEOUT: 260000
 
   selenium_firefox_node:
-    image: selenium/node-firefox:3.14.0
+    image: selenium/node-firefox:3.14.0-europium
     environment:
-      # HUB_PORT_4444_TCP_ADDR: selenium_hub
-      # HUB_PORT_4444_TCP_PORT: 4444
-      HUB_HOST: selenium_hub
-      HUB_PORT: 4444
+      HUB_PORT_4444_TCP_ADDR: hub
+      HUB_PORT_4444_TCP_PORT: 4444
       FIREFOX_VERSION: 61.0.1
-      SE_OPTS: -debug -browserTimeout 600000 -timeout 600000 -browser browserName=firefox,version=61.0.1,maxInstances=6,maxSessions=6
-      NODE_MAX_INSTANCES: 8
-      NODE_MAX_SESSION: 8
+      SE_OPTS: -browser browserName=firefox,version=61.0.1,maxInstances=12,maxSessions=12
+      NODE_MAX_INSTANCES: 12
+      NODE_MAX_SESSION: 12
       SCREEN_WIDTH: 2560
       SCREEN_HEIGHT: 1440
-      SHM_SIZE: 1024MB
     volumes:
       - /dev/shm:/dev/shm
     depends_on:
@@ -43,39 +40,13 @@ services:
       - selenium_hub:hub
 
   selenium_last_firefox_node:
-    image: selenium/node-firefox:3.14.0
+    image: selenium/node-firefox:3.14.0-europium
     environment:
-      # HUB_PORT_4444_TCP_ADDR: selenium_hub
-      # HUB_PORT_4444_TCP_PORT: 4444
-      HUB_HOST: selenium_hub
-      HUB_PORT: 4444
-      SCREEN_WIDTH: 2560
-      SCREEN_HEIGHT: 1440
-      SE_OPTS: -browserTimeout 600000 -timeout 600000 -browser browserName=firefox,version=60.0.1,maxInstances=5,maxSessions=5
-      SHM_SIZE: 1024MB
-    volumes:
-      - /dev/shm:/dev/shm
-    depends_on:
-      - selenium_hub
-    networks:
-      - qa_network
-    links:
-      - selenium_hub:hub
-
-  selenium_chrome_node:
-    image: selenium/node-chrome:3.14.0
-    environment:
-      # HUB_PORT_4444_TCP_ADDR: selenium_hub
-      # HUB_PORT_4444_TCP_PORT: 4444
-      HUB_HOST: selenium_hub
-      HUB_PORT: 4444
-      CHROME_VERSION: 67.0.3396.99
-      SE_OPTS: -debug -browserTimeout 600000 -timeout 600000 -browser browserName=chrome,version=67.0.3396.99,maxInstances=6,maxSessions=6
-      NODE_MAX_INSTANCES: 8
-      NODE_MAX_SESSION: 8
-      SCREEN_WIDTH: 2560
-      SCREEN_HEIGHT: 1440
-      SHM_SIZE: 1024MB
+      HUB_PORT_4444_TCP_ADDR: hub
+      HUB_PORT_4444_TCP_PORT: 4444
+      SE_OPTS: -browser browserName=firefox,version=60.0.1,maxInstances=4,maxSessions=4
+      NODE_MAX_INSTANCES: 4
+      NODE_MAX_SESSION: 4
     volumes:
       - /dev/shm:/dev/shm
     depends_on:
@@ -86,16 +57,15 @@ services:
       - selenium_hub:hub
 
   selenium_last_chrome_node:
-    image: selenium/node-chrome:3.14.0
+    image: selenium/node-chrome:3.14.0-europium
     environment:
-      # HUB_PORT_4444_TCP_ADDR: selenium_hub
-      # HUB_PORT_4444_TCP_PORT: 4444
-      HUB_HOST: selenium_hub
-      HUB_PORT: 4444
-      SE_OPTS: -browserTimeout 600000 -timeout 600000 -browser browserName=chrome,version=66.0.3359,maxInstances=5,maxSessions=5
+      HUB_PORT_4444_TCP_ADDR: hub
+      HUB_PORT_4444_TCP_PORT: 4444
+      SE_OPTS: -browser browserName=chrome,version=66.0.3359,maxInstances=4,maxSessions=4
       SCREEN_WIDTH: 2560
       SCREEN_HEIGHT: 1440
-      SHM_SIZE: 1024MB
+      NODE_MAX_INSTANCES: 4
+      NODE_MAX_SESSION: 4
     volumes:
       - /dev/shm:/dev/shm
     depends_on:
@@ -105,6 +75,25 @@ services:
     links:
       - selenium_hub:hub
 
+  selenium_chrome_node:
+    image: selenium/node-chrome:3.14.0-europium
+    environment:
+      HUB_PORT_4444_TCP_ADDR: hub
+      HUB_PORT_4444_TCP_PORT: 4444
+      CHROME_VERSION: 67.0.3396.99
+      SE_OPTS: -browser browserName=chrome,version=67.0.3396.99,maxInstances=12,maxSessions=12
+      NODE_MAX_INSTANCES: 12
+      NODE_MAX_SESSION: 12
+      SCREEN_WIDTH: 2560
+      SCREEN_HEIGHT: 1440
+    volumes:
+      - /dev/shm:/dev/shm
+    depends_on:
+      - selenium_hub
+    networks:
+      - qa_network
+    links:
+      - selenium_hub:hub
 
   owasp_zap_server:
     image: owasp/zap2docker-stable
@@ -115,12 +104,12 @@ services:
     command: zap.sh -daemon -port 8081 -host 0.0.0.0 -config api.key=0123456789 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true -config scanner.strength=INSANE
 
 
-  # lighthouse_server:
-  #   image: kmturley/lighthouse-ci
-  #   networks:
-  #     - qa_network
-  #   ports:
-  #     - "8085:8085"
+  lighthouse_server:
+    image: kmturley/lighthouse-ci
+    networks:
+      - qa_network
+    ports:
+      - "8085:8085"
 
 
   functional_current_chrome:
@@ -139,7 +128,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:67.0.3396.99 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features && echo -e "Environment=Local" > qa/utilities/allure/allure_results/environment.properties;'
+      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:67.0.3396.99 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
 
   functional_last_chrome:
@@ -156,7 +145,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:66.0.3359 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features --no-skipped'
+      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:66.0.3359 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
 
   functional_current_firefox:
@@ -173,7 +162,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:61.0.1 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features --no-skipped'
+      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:61.0.1 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features --no-skipped && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
 
   functional_last_firefox:
@@ -190,7 +179,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:60.0.1 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features --no-skipped'
+      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:60.0.1 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/functional/features --no-skipped && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
 
   performance_tests:
@@ -220,7 +209,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:67.0.3396.99 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_chrome.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags chrome-only --no-skipped'
+      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:67.0.3396.99 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_chrome.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags chrome-only --no-skipped && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
   visual_last_chrome:
     build:
@@ -235,7 +224,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:66.0.3359 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_chrome.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags chrome-only --no-skipped'
+      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:66.0.3359 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_chrome.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags chrome-only --no-skipped && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
   visual_current_firefox:
     build:
@@ -250,7 +239,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:61.0.1 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_firefox.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags firefox-only --no-skipped'
+      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:61.0.1 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_firefox.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags firefox-only --no-skipped && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
   visual_last_firefox:
     build:
@@ -265,8 +254,7 @@ services:
     networks:
       - qa_network
     command:
-      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:60.0.1 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_firefox.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags firefox-only --no-skipped'
-
+      bash -c './qa/utilities/wait_for/wait-for-node.sh firefox:60.0.1 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_firefox.config --jsonreport qa/visual/reports/ && behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/  --tags firefox-only --no-skipped && echo -e "Browser=$DRIVER\nEnvironment=$ENVIRONMENT_NAME" > qa/utilities/allure/allure_results/environment.properties;'
 
   security_tests:
     build:
