--- a/ci_files/docker-compose-example.yml
+++ b/ci_files/docker-compose-example.yml
@@ -112,6 +112,25 @@ services:
       - "8085:8085"
 
 
+  analytics_test:
+    build:
+      context: ./qa
+    depends_on:
+      - selenium_chrome_node
+    environment:
+      BASE_URL: 'https://google.com'
+      DRIVER: 'remote_ga_chrome'
+      SELENIUM: 'http://selenium_hub:4444/wd/hub'
+      HUB_PORT_4444_TCP_ADDR: hub
+      HUB_PORT_4444_TCP_PORT: 4444
+    volumes:
+      - ./qa/utilities/allure/allure_results:/usr/tmp/qa/utilities/allure/allure_results:consistent
+    networks:
+      - qa_network
+    command:
+      bash -c './qa/utilities/wait_for/wait-for-node.sh chrome:67.0.3396.99 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_results ./qa/analytics/features'
+
+
   functional_current_chrome:
     build:
       context: ./qa
